[gd_scene load_steps=4 format=3 uid="uid://cqd7gxxeb4hju"]

[ext_resource type="StyleBox" uid="uid://dvm50xvp1nb7j" path="res://styles/common_style.tres" id="1_40x3c"]
[ext_resource type="Script" uid="uid://dw2yiifbarooa" path="res://scenes/ui/shop/item_card.gd" id="2_3b58y"]
[ext_resource type="Texture2D" uid="uid://cyh23wqn8vcac" path="res://assets/sprites/Weapons/Icons/weapon_punch_icon.png" id="3_emdyg"]

[node name="ItemCard" type="Button"]
custom_minimum_size = Vector2(80, 80)
theme_override_styles/normal = ExtResource("1_40x3c")
script = ExtResource("2_3b58y")

[node name="ItemIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_emdyg")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="." to="." method="_on_pressed"]
